syntax = "proto3";
option go_package = "api/server_side;server_side";

package server_side;

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  string user_id = 1;
  string name = 2;
  string email = 3;
}

service ServerSide {
  rpc GetUser(GetUserRequest) returns (stream GetUserResponse) {}

}